repos/testing/aiida/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: aiida-postgres-test
  namespace: scratch
  labels:
    app: aiida-postgres
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None
  selector:
    app: aiida-postgres

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiida-postgres-test
  namespace: scratch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aiida-postgres
  template:
    metadata:
      labels:
        app: aiida-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
          name: postgredb
