repos/testing/aiida/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: rabbitmq
  name: rabbitmq-service
  namespace: scratch
spec:
  ports:
  - port: 5672
  selector:
    app: taskQueue
    component: rabbitmq
